<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#CACACA"
    android:orientation="vertical"
    android:weightSum="7"
    app:layout_constraintWidth_percent="100">

    <RelativeLayout
        android:id="@+id/itemList7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_text_view7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Seven_days"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Six_days"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Five_days"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Four_days"
            android:scrollHorizontally="true"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Three_days"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Two_days"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemList1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CACACA"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="3dp"
            android:textSize="13sp"
            android:text="@string/Yesterday"
            android:textColor="#363636"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:onClick="displayMessage"
            android:visibility="invisible"
            android:background="@drawable/ic_comment_black_48px"
            android:contentDescription="@string/contentDescriptionViewNoteButton"/>

    </RelativeLayout>
</LinearLayout>